2004-08-13  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.10 released.

2004-08-13  Phil Blundell  <pb@nexus.co.uk>

	* Makefile: Update to modern standards vis a vis PACKAGE_CFLAGS,
	etc.

2004-03-06  Toby Gray <toby@yargybot.com>

	* announce.h: minor tidy-up
	* interface.c: tidied-up widget names, added widgets for variable-length
	  snooze
	* callbacks.c: renamed mythread to SoundThread, tidied-up for consistent
	  layout, edited on_snooze_clicked to implement variable-length snooze
 	* Version 0.09 is released.

2003-09-16  Joe McCarthy <jjmcc@pitt.edu>

	* callbacks.c : remove the pthread_detatch so that we can pthread_join at the end of a "session" and not have the "loud ending"
 	* Version 0.07 is released.

2003-07-07  Moray Allan  <moray@sermisy.org>

	* Makefile : Removed legacy GTK1 support.

2003-04-20  Joe McCarthy <jjmcc@pitt.edu>

	* callbacks.c : oops, snooze doesnt work quite right....add a check
	for buf being null
	* Version 0.06 will be released soon :).
	
2003-04-20  Joe McCarthy <jjmcc@pitt.edu>

	* callbacks.c : Move fd open calls, add fd close calls, have the alarm
	volume crescendo and then stop after 20 beaps (10 loud ones)
	* main.c : initialize times so that crescendo works properly
	* Version 0.05 released.
	
2003-04-20  Philip Blundell  <philb@gnu.org>

	* Version 0.04 released.
	
2003-04-20  Philip Blundell  <philb@gnu.org>

	* familiar/control1 (Depends): Depend on libschedule0.
	* Makefile: Link with libschedule.  Remove unused -lesd.
	(install-program): Don't ship bell.png; use the one from
	gpe-icons.
	* pixmaps/bell.png: Deleted.
	* callbacks.c (schedule_alarm): Use libschedule.
	(on_snooze_clicked): Use SNOOZE macro.
	* interface.c (create_window): Omit comment field if text is
	NULL.  Mark strings for translation.  Change "Acknowledge" button
	to "Dismiss".  Provide icons for Dismiss and Snooze buttons.
	Remove calls to gtk_widget_show.
	* main.c (my_icons): Add clock-popup.
	(times): Remove unneeded initialiser.